graphistry_helm-release/templates/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose --file ./compose/release.yml convert -c
    kompose.service.expose: "true"
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: caddy
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
